<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="391dp"
        android:layout_height="304dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.765">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button44"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/custom_button"
                android:text="@string/clear"
                app:backgroundTint="@null"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/button43"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/custom_button"
                android:text="@string/parentheses"
                app:backgroundTint="@null"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/button42"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/custom_button"
                android:text="@string/exponent"
                app:backgroundTint="@null"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/button41"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/custom_button"
                android:text="@string/divide"
                app:backgroundTint="@null"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button48"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/custom_button"
                android:text="@string/seven"
                app:backgroundTint="@null"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/button47"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/custom_button"
                android:text="@string/eight"
                app:backgroundTint="@null"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/button46"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/custom_button"
                android:text="@string/nine"
                app:backgroundTint="@null"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/button45"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/custom_button"
                android:text="@string/multiply"
                app:backgroundTint="@null"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button52"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/custom_button"
                android:text="@string/four"
                app:backgroundTint="@null"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/button51"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/custom_button"
                android:text="@string/five"
                app:backgroundTint="@null"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/button50"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/custom_button"
                android:text="@string/six"
                app:backgroundTint="@null"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/button49"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/custom_button"
                android:text="@string/subtract"
                app:backgroundTint="@null"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button56"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/custom_button"
                android:text="@string/one"
                app:backgroundTint="@null"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/button55"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/custom_button"
                android:text="@string/two"
                app:backgroundTint="@null"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/button54"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/custom_button"
                android:text="@string/three"
                app:backgroundTint="@null"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/button53"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/custom_button"
                android:text="@string/add"
                app:backgroundTint="@null"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button59"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/custom_button"
                android:text="@string/zero"
                app:backgroundTint="@null"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/button58"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/custom_button"
                android:text="@string/point"
                app:backgroundTint="@null"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/button57"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/custom_button"
                android:text="@string/equals"
                app:backgroundTint="@null"
                tools:ignore="TextContrastCheck" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:text="Insert Operation"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>